--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
 gunicorn==20.0.4
 Flask==1.1.2
+Flask-Login==0.5.0
+Flask-SQLAlchemy==2.4.4 
+Jinja2==2.11.2
+requests==2.24.0
+SQLAlchemy==1.3.19
+Flask-Bootstrap==3.3.7.1
+email-validator==1.1.2
+psycopg2-binary==2.8.6
