fix internal server error

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 students.db
+test.py
 # Created by https://www.toptal.com/developers/gitignore/api/flask,python,flashbuilder
 # Edit at https://www.toptal.com/developers/gitignore?templates=flask,python,flashbuilder
 
