--- a/static/manifest.json
+++ b/static/manifest.json
@@ -15,7 +15,7 @@
         "sizes": "240x240"
       }
   ],
-  "start_url": "/python_registration",
+  "start_url": "/python-registration",
   "display": "standalone",
   "orientation": "portrait"
 }
