1. Landing page add. 2. New Refreshing UI. 3. Easy to Use. 4. Auto login feature added. 5. Now use it as an app.

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -15,7 +15,7 @@
         "sizes": "240x240"
       }
   ],
-  "start_url": "/python-registration",
+  "start_url": "/",
   "display": "standalone",
   "orientation": "portrait"
 }
